changes on index page, products section completed

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -48,7 +48,7 @@
           <b>INFORMACIÓN</b>
         </div>
         <div class="panel-body">
-          El carrito de compras le permite agregar productos para enviarlos por un mensaje de WhatsApp al equipo de ventas de OCWAviationSIMS. Los pagos y detalles de envío se coordinan directamente por WhatsApp.
+          El carrito de compras te permite agregar productos para enviarlos por un mensaje de WhatsApp al equipo de ventas de OCWAviationSIMS. Los pagos y detalles de envío se coordinan directamente por WhatsApp.
         </div>
       </div>
 
@@ -69,3 +69,143 @@
   </div>
 </div>
 
+<!--explore start -->
+		<section id="explore" class="explore">
+			<div class="container">
+				<div class="section-header">
+					<h2>Explora otros productos</h2>
+					<p>Conoce los simuladores que están siendo usados actualmente por nuestros clientes y los otro productos que ofrecemos</p>
+				</div><!--/.section-header-->
+				<div class="explore-content">
+					<div class="row">
+
+
+						<div class="container">
+							<!-- Nav tabs -->
+							
+								<ul class="nav nav-tabs" role="tablist" style="display: table; margin: 0 auto;">
+									<% Category.all.each_with_index do |category, index| %>
+										<% if !category.products.empty? %>
+											<li role="presentation" class="<%= 'active' if index == 0 %>">
+												<a href="#cat-<%= category.id %>" aria-controls="cat-<%= category.id %>" role="tab" data-toggle="tab">
+												<h4><%= category.name %></h4>
+												</a>
+											</li>
+										<% end %>
+									<% end %>
+								</ul>
+							
+							<br>
+							<!-- Tab panes -->
+							<div class="tab-content">
+								<% Category.all.each_with_index do |category, index| %>
+								<div role="tabpanel" class="tab-pane fade <%= 'in active' if index == 0 %>" id="cat-<%= category.id %>">
+									<div class="row">
+									<% category.products.each do |product| %>
+
+										<div class=" col-md-4 col-sm-6">
+										<div class="single-explore-item">
+											<div class="single-explore-img">
+												<div id="product-carousel-<%= product.id %>" class="carousel slide single-explore-img" data-ride="carousel">
+						
+
+													<!-- Wrapper for slides -->
+													<div class="carousel-inner">
+														<% product.images.each_with_index do |image, index| %>
+														<div class="item <%= 'active' if index == 0 %>">
+															<%= link_to url_for(image), class: "glightbox", data: { gallery: "product-#{product.id}" } do %>
+																<%= image_tag image, alt: "Product Image", class: "img-responsive" %>
+															<% end %>
+														</div>
+														<% end %>
+													</div>
+
+													<!-- Controls -->
+													<a class="left carousel-control" href="#product-carousel-<%= product.id %>" data-slide="prev">
+														<span class="fa-solid fa-arrow-left"></span>
+													</a>
+													<a class="right carousel-control" href="#product-carousel-<%= product.id %>" data-slide="next">
+														<span class="fa-solid fa-arrow-right"></span>
+													</a>
+												</div>
+											</div>
+											<div class="single-explore-txt bg-theme-1">
+												<h2><%= product.name %></h2>
+												
+												<div class="explore-person">
+													<div class="row">
+														
+														<div class="col-sm-12">
+															<p>
+																<%= product.description %> 
+															</p>
+															Bs. <%= product.price %>
+														</div>
+													</div>
+												</div>
+												<div class="explore-open-close-part">
+													<div class="row">
+														<div class="col-sm-5">
+															<% if @cart.includes_product?(product) %>
+																<%= button_to "Agregado al carrito", cart_path, method: :get, class: "btn btn-success" %>
+															<% else %>
+																<%= button_to "Agregar a carrito", add_item_cart_path(product_id: product.id), method: :post, class: "btn btn-default" %>
+															<% end %>
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>	
+
+
+
+
+
+
+
+										
+									<% end %>
+									</div>
+								</div>
+								<% end %>
+							</div>
+						</div>
+
+				
+
+						
+					
+					
+					</div>
+				</div>
+			</div><!--/.container-->
+
+		</section><!--/.explore-->
+		<!--explore end -->
+
+<script>
+function sendWhatsAppMessage() {
+	var message = document.getElementById('whatsapp-message').value;
+	var phone = "59177498233";
+	var url = "https://wa.me/" + phone + "?text=Hola, OCWAviationSIMS. " + encodeURIComponent(message);
+
+	window.open(url, "_blank");
+}
+
+document.addEventListener("DOMContentLoaded", function () {
+    const lightbox = GLightbox({
+      selector: '.glightbox'
+    });
+  });
+
+  
+  $(function() {
+    $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+      var $target = $($(e.target).attr("href"));
+      $('.tab-pane').not($target).hide();
+      $target.fadeIn(300);
+    });
+  });
+
+</script>
