--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -243,7 +243,7 @@ nav.navbar.bootsnav .navbar-toggle i{color: rgb(31, 134, 200);}
 --------------------------------------*/
 .welcome-hero {
     position: relative;
-    background:url(welcome-hero/banner.jpg)no-repeat;
+    background:url(e8.jpg)no-repeat;
     background-position:center;
     background-size:cover;
     text-align: center;
@@ -441,7 +441,7 @@ nav.navbar.bootsnav .navbar-toggle i{color: rgb(31, 134, 200);}
     padding:117px 0 95px;
     background: #f8fafb;
 }
-.explore-content{margin-top: 78px;}
+.explore-content{margin-top: 10px;}
 
 .single-explore-item {
     background: #fff;
@@ -679,7 +679,7 @@ nav.navbar.bootsnav .navbar-toggle i{color: rgb(31, 134, 200);}
     position:relative;
     display: flex;
     align-items: center;
-    background:url(counter/counter-banner.jpg)no-repeat fixed;
+    background:url(e7.jpg)no-repeat fixed;
     background-position:center;
     background-size:cover;
     padding:127px 0 120px;
