--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,8 +38,10 @@
                       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                           <i class="fa fa-bars"></i>
                       </button>
-                      <a class="navbar-brand" href="/" data-turbo="false">OCWAVIATION</a>
-
+                      <a class="navbar-brand" href="/" data-turbo="false">
+                        <%= image_tag "logo2.png", alt: "OCW Logo", style: "height: 6rem; margin-top: -15px;" %>
+                        
+                      </a>
 
                   </div><!--/.navbar-header-->
                   <!-- End Header Navigation -->
